# armoredbits

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  armoredbits.cabal  default.nix  packages.nix  server.cfg  shell.nix
armoredbits/client/: Main.hs
armoredbits/server/: Main.hs
client/: Main.hs
docs/: GAMEPLAY.md  MILESTONES.md
server/: Main.hs
src/ArmoredBits/: Messages.hs  Network.hs  TaskManager.hs  Types.hs  Util.hs
src/ArmoredBits/Config/: Client.hs  Parse.hs  Server.hs
src/ArmoredBits/Control/: Tasks.hs
src/ArmoredBits/Network/: Messages.hs  Peer.hs  Server.hs
src/ArmoredBits/Network/Internal/: Peer.hs
test/: Main.hs
test/ArmoredBits/Network/: MessagesSpec.hs  PeerSpec.hs  ServerSpec.hs
