name:                armoredbits
version:             0.1.0.0
synopsis:            Realtime Multiplayer AI Mech Battles
homepage:            http://armoredbits.com
license:             Apache-2.0
license-file:        LICENSE
author:              Brian Jones
maintainer:          brian@uncannyworks.com
copyright:           2014-2018 Uncanny Works, LLC
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArmoredBits.Messages
                     , ArmoredBits.Network
                     , ArmoredBits.TaskManager
                     , ArmoredBits.Types
                     , ArmoredBits.Util
  build-depends:       base >=4.10 && <4.11
                     , apecs
                     , async
                     , bytestring
                     , cborg
                     , clock
                     , containers
                     , microlens-platform
                     , network
                     , network-simple
                     , serialise
                     , stm
                     , tagged
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -j -O0 -v0


executable armoredbits-server
  hs-source-dirs:      server
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , armoredbits
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-maxN2 -Wall -j -O0 -v0

executable armoredbits-client
  hs-source-dirs:      client
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , armoredbits
                     , network
                     , network-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-maxN2 -Wall -j -O0 -v0
