name:                armoredbits
version:             0.1.0.0
synopsis:            Network Game Engine
homepage:            http://armoredbits.com
license:             Apache-2.0
license-file:        LICENSE
author:              Brian Jones
maintainer:          brian@uncannyworks.com
copyright:           2014-2018 Uncanny Works, LLC
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArmoredBits.Config.Parse
                     , ArmoredBits.Control.Tasks
                     , ArmoredBits.Network.Messages
                     , ArmoredBits.Network.Peer
                     , ArmoredBits.Network.Server
                     , ArmoredBits.Types
                     , ArmoredBits.Util
                     -- Internal
                     , ArmoredBits.Network.Internal.Peer
  build-depends:       apecs
                     , base >=4.10 && <4.11
                     , async
                     , bytestring
                     , cborg
                     , clock
                     , containers
                     , microlens-platform
                     , network
                     , network-simple
                     , optparse-applicative
                     , serialise
                     , stm
                     , tagged
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -j -O0 -v0

test-suite armoredbits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       ArmoredBits.Network.MessagesSpec
                     , ArmoredBits.Network.PeerSpec
  build-depends:       armoredbits
                     , base
                     , clock
                     , directory
                     , hspec
                     , microlens-platform
                     , stm
  default-language:    Haskell2010
  ghc-options:         -Wall -j -O0 -v0

executable armoredbits-server
  hs-source-dirs:      armoredbits/server
  main-is:             Main.hs
  build-depends:       armoredbits
                     , base >=4.10 && <4.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-maxN2 -Wall -j -O0 -v0

executable armoredbits-client
  hs-source-dirs:      armoredbits/client
  main-is:             Main.hs
  build-depends:       armoredbits
                     , base >=4.10 && <4.11
                     , network
                     , network-simple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-maxN2 -Wall -j -O0 -v0
